name:                streaming-postgresql-simple
version:             0.2.0.1
synopsis:            Stream postgresql-query results using the streaming library
description:         This package provides incremental streaming functions for the @postgresql-simple@ library.
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
bug-reports:         https://github.com/ocharles/streaming-postgresql-simple/issues
source-repository head
                    type: git
                    location: https://github.com/ocharles/streaming-postgresql-simple

library
  exposed-modules:     Database.PostgreSQL.Simple.Streaming
  other-extensions:    BangPatterns, OverloadedStrings, RecordWildCards, ScopedTypeVariables
  build-depends:       base >=4.9 && <4.11
                     , bytestring >= 0.10.8.1 && < 0.11
                     , exceptions >= 0.8.3 && < 0.9
                     , postgresql-libpq >= 0.9.2.0 && < 0.10
                     , postgresql-simple >=0.5 && <0.6
                     , resourcet >= 1.1.8.1 && < 1.2
                     , safe-exceptions >= 0.1.4.0 && < 0.2
                     , streaming >=0.1 && <0.2
                     , transformers >= 0.5.2.0 && < 0.6
  default-language:    Haskell2010
  ghc-options:       -Wall
