name: streaming-postgresql-simple
version: 0.2.0.4
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ollie@ocharles.org.uk
bug-reports: https://github.com/haskell-streaming/streaming-postgresql-simple/issues
synopsis: Stream postgresql-query results using the streaming library
description:
    This package provides incremental streaming functions for the @postgresql-simple@ library.
category: Database
author: Ollie Charles
extra-source-files:
    ChangeLog.md

source-repository head
    type: git
    location: https://github.com/haskell-streaming/streaming-postgresql-simple

library
    exposed-modules:
        Database.PostgreSQL.Simple.Streaming
    build-depends:
        base >=4.9 && <4.14,
        bytestring >=0.10.8.1 && <0.11,
        exceptions >=0.8.3 && <0.11,
        postgresql-libpq >=0.9.2.0 && <0.10,
        postgresql-simple >=0.5 && <0.7,
        resourcet >=1.1.8.1 && <1.3,
        safe-exceptions >=0.1.4.0 && <0.2,
        streaming >=0.1 && <0.3,
        transformers >=0.5.2.0 && <0.6
    default-language: Haskell2010
    other-extensions: BangPatterns OverloadedStrings RecordWildCards
                      ScopedTypeVariables
    ghc-options: -Wall

